# inline.rs

./: .gitignore  Cargo.toml  README.markdown  index.html  inline-rs-website-eec97c5408ebacda.js  inline-rs-website-eec97c5408ebacda_bg.wasm  inlone-rs-test-8fc36ccd76cbb1e6.js  inlone-rs-test-8fc36ccd76cbb1e6_bg.wasm
.github/workflows/: rust.yml
example/: Cargo.toml  trunk.toml
example/public/: index.html
example/src/: main.rs
src/: lib.rs  main.rs
