[package]
name = "inline-rs"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface"]
description= "Inline CSS in Rust!"
homepage = "https://github.com/angeldollface/inline.rs"
repository = "https://github.com/angeldollface/inline.rs"
documentation = "https://github.com/angeldollface/inline.rs"
readme = "README.markdown"
keywords = ["css", "styling"]
categories = ["css", "styling"]
exclude = ["/.github"]